--- a/index.html
+++ b/index.html
@@ -1,109 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <section id="about">
-        <nav>
-            <div class="personal__logo">Chase Swick</div>
-            <ul class="nav__link--list">
-                <li>
-                    <a href="" class="nav__link--anchor">Languages</a>
-                </li>
-                <li>
-                    <a href="" class="nav__link--anchor">Projects</a>
-                </li>
-                <li>
-                    <a href="" class="nav__link--anchor-primary">Contact</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="flex flex-1">
-            <div class="about-me__info--row">
-                <div class="about-me__info--container">
-                    <figure class="about-me__picture--mask">
-                        <img src="./assets/Chase.jpeg" class="about-me__picture" alt="Picture of me">
-                    </figure>
-                    <h1 class="about-me__info--title">
-                        Hello! I'm <span class="text--purple">Chase Swick</span>
-                    </h1>
-                    <p class="about-me__info--para">
-                        I am a <strong class="text--purple">Full Stack Software Developer</strong> with experience in building full stack web applications, and I am a graduate from West Virginia University 
-                        with a Bachelor's Degree in Computer Engineering. From college I joined Revature where I extended my knowledge from Java to full stack programming 
-                        using Spring/Angular, and am now looking for opportunities elsewhere. I am skilled in both Java and .NET technology stacks, and am always picking up 
-                        new technologies to learn. 
-                    </p>
-                    <div class="about-me__links">
-                        <a href="" class="about-me__link">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="" class="about-me__link">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="" class="about-me__link">
-                            <i class="far fa-envelope"></i>
-                        </a>
-                        <a href="" class="about-me__link">
-                            <i class="fas fa-file-pdf"></i>
-                        </a>
-                    </div>
-                </div>
-                <figure class="about-me__img--container">
-                    <img src="./assets/undraw_software_engineer_re_tnjc.svg" class="about-me__img" alt="">
-                </figure>
+      <nav>
+        <div class="personal__logo">Chase Swick</div>
+        <ul class="nav__link--list">
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Languages</a
+            >
+          </li>
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a href="" class="nav__link--anchor-primary">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="flex flex-1">
+        <div class="about-me__info--row">
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img
+                src="./assets/Chase.jpeg"
+                class="about-me__picture"
+                alt="Picture of me"
+              />
+            </figure>
+            <h1 class="about-me__info--title">
+              Hello! I'm <span class="text--purple">Chase Swick</span>
+            </h1>
+            <p class="about-me__info--para">
+              I am a
+              <strong class="text--purple"
+                >Full Stack Software Developer</strong
+              >
+              with experience in building full stack web applications, and I am
+              a graduate from West Virginia University with a Bachelor's Degree
+              in Computer Engineering. From college I joined Revature where I
+              extended my knowledge from Java to full stack programming using
+              Spring/Angular, and am now looking for opportunities elsewhere. I
+              am skilled in both Java and .NET technology stacks, and am always
+              picking up new technologies to learn.
+            </p>
+            <div class="about-me__links">
+              <a
+                href="https://github.com/Swicky97"
+                class="about-me__link"
+                target="_blank"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/chase-swick-bb94ba233/"
+                class="about-me__link"
+                target="_blank"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a
+                href="mailto:chaseswick@gmail.com"
+                class="about-me__link"
+                target="_blank"
+              >
+                <i class="far fa-envelope"></i>
+              </a>
+              <a
+                href="./assets/My-Resume.pdf"
+                class="about-me__link"
+                target="_blank"
+              >
+                <i class="fas fa-file-pdf"></i>
+              </a>
             </div>
+          </div>
+          <figure class="about-me__img--container">
+            <img
+              src="./assets/undraw_software_engineer_re_tnjc.svg"
+              class="about-me__img"
+              alt=""
+            />
+          </figure>
         </div>
+      </div>
     </section>
     <section id="languages">
-        <div class="container">
-            <div class="row">
-                <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
-                <div class="language__list">
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="./assets/html.svg" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">HTML</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="./assets/css3.svg" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">CSS</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="./assets/javascript.svg" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">JavaScript</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="./assets/typescript.svg" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">TypeScript</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="./assets/angular.svg" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">Angular</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="./assets/dot-net.svg" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">.NET Core</span>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            This is my <span class="text--purple">technology stack</span>
+          </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./assets/html.svg" alt="" class="language__img" />
+              </figure>
+              <span class="language__name">HTML</span>
             </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./assets/css3.svg" alt="" class="language__img" />
+              </figure>
+              <span class="language__name">CSS</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="./assets/javascript.svg"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="./assets/typescript.svg"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">TypeScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./assets/angular.svg" alt="" class="language__img" />
+              </figure>
+              <span class="language__name">Angular</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./assets/dot-net.svg" alt="" class="language__img" />
+              </figure>
+              <span class="language__name">.NET Core</span>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
-</body>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text--purple">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/BlankProject.png"
+                  class="project__img"
+                  alt=""
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Coming Soon</h3>
+                  <h4 class="project__description--sub-title">Tech Stack</h4>
+                  <p class="project__description--para">
+                    Description of the project
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://www.github.com/yourlink"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/BlankProject.png"
+                  class="project__img"
+                  alt=""
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Coming Soon</h3>
+                  <h4 class="project__description--sub-title">Tech Stack</h4>
+                  <p class="project__description--para">
+                    Description of the project
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://www.github.com/yourlink"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./assets/CS-Logo.jpeg" class="footer__logo--img" alt="" />
+          </figure>
+          <span class="footer__logo--popper">
+            Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
+        </a>
+        <div class="footer__social--list">
+          <a
+            href="https://github.com/Swicky97"
+            target="_blank"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            >GitHub</a
+          >
+          <a
+            href="https://www.linkedin.com/in/chase-swick-bb94ba233/"
+            target="_blank"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            >LinkedIn</a
+          >
+          <a
+            href="mailto:chaseswick@gmail.com"
+            target="_blank"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            >Email</a
+          >
+          <a
+            href="./assets/My-Resume.pdf"
+            target="_blank"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            >Resume</a
+          >
+        </div>
+        <div class="footer__copyright">Copyright © 2022 Chase Swick</div>
+      </div>
+    </footer>
+  </body>
 </html>
