--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chase Swick</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   <script src="index.js"></script>
@@ -58,7 +58,9 @@
     </nav>
     <header class="header">
       <div class="header__content">
-        <h1 class="title">Hello</h1>
+        <div class="header__img--container">
+          <h1 class="title">Hello <img src="./assets/Chase.jpeg" alt="" class="header__img"></h1>
+        </div>
         <h1 class="title red">I'm Chase.</h1>
         <p class="header__para">
           I'm a <b class="red">Full Stack Software Engineer</b> with a passion for building web applications and improving user experience.
